Test with biased locking